2005-03-07  Pabs  <pabs@zip.to>

	* Makefile.am (nsi): upx compress the exe produced by makensis

	* Move source into src dir and manpage into doc dir

	* Re-add debian/ directory (but only to CVS, not dist)

	* debian/control (Build-Depends): Add cdbs and docbook to man converters

2005-01-14  Pabs  <pabs@zip.to>

	* debian/: Remove from CVS - I'll keep this elsewhere to practice debian
	packaging properly.

2005-01-14  Pabs  <pabs@zip.to>

	* chmdeco.nsi, chmdeco.docbook, chmdeco.h, chmdeco-popups, chmdeco.spec.in,
	common.h, configure.ac, convert.h, hhc.h, hhk.h, hhp.h, magic.chmfile,
	Makefile.am, misc.h, windows.h:
	Add GPL notice, get BSD/LICENCE/istorage.exe from ..

2003-08-22  Pabs  <pabs@zip.to>

	* chmdeco.docbook (DOCTYPE): Changed ststem id to the web location, so it
	will easily build on systems with an xml catalog file.

2003-07-15  Pabs  <pabs@zip.to>

	* chmdeco.nsi (SendTo Menu Shortcuts): Fix SendTo links
	* chmdeco.nsi (Uninstall): Correctly delete SendTo shortcuts

	* chmdeco.nsi (un.onInit): New function, sets SetShellVarContext correctly

2003-06-25  Pabs  <pabs@zip.to>

	* hhp.c (print_files): Now chdir up between readdir and stat and chdir down
	at the end of the loop. Less efficient, but works on both Linux and MinGW.

	* misc.c (recreate_html_from_fts): Print warning when we can't open the
	output file, mkdir -p before opening out_file
	* misc.c (mkdirp): New function

	* hhp.c (recreate_hhp): Fix output of Title & Language (add '\r's)

	* chmdeco.nsi (Uninstall): Added lots of calls to DeleteRegKey /ifempty

2003-06-18  Pabs  <pabs@zip.to>

	* debian/rules (binary-arch): Call dh_installmenu to install the menu file

2003-06-15  Pabs  <pabs@zip.to>

	* Makefile.am (chmdeco.1): Don't fail if the manpage can't be created

	* Makefile.am (nsidir): Use unix2dos instead of awk
	* Makefile.am: Add configure note for making on MinGW

	* README (More info): The spec has now been released

	* chmdeco.nsi: Replace @ with "" in WriteRegStr calls
